fixed bug with right side minus sign in overflow-bottom moving to left on close, fixed top placekitten sizes

--- a/web/app/themes/monk-theme/src/styl/main.styl
+++ b/web/app/themes/monk-theme/src/styl/main.styl
@@ -449,6 +449,10 @@ a.more-link
 	grid-column-end 10
 	grid-row-start 2
 	grid-row-end 3
+
+	i.fa
+		display none
+
 	.in &
 		height 1em
 		background-color #fb0303
@@ -503,8 +507,8 @@ a.more-link
 		grid-column-end 4
 
 
-	i.fa
-		display none
+		i.fa
+			display none
 
 	&.in
 		max-height 20000px
@@ -646,7 +650,7 @@ a.more-link
 		img
 			width 100%
 			height 100%
-			object-fit contain
+			object-fit cover
 			object-position 50% -30%
 			transition all ease-in-out .2s
 			&:hover
